fix spacing issues on mobile

--- a/components/BadgeView/BadgeView.module.css
+++ b/components/BadgeView/BadgeView.module.css
@@ -17,7 +17,7 @@
   background-color: white;
   box-shadow: 0px 1px 2px #00000066;
   border-radius: 15px;
-  min-width: 250px;
+  min-width: 200px;
   display: flex;
   flex-direction: column;
   padding: 2.5em;
@@ -84,9 +84,10 @@
   .badgeContainer {
     display: flex;
     flex-direction: column;
-    margin: 2rem;
+    margin: 10vmin;
     text-align: center;
     flex: auto 1 1;
+    gap: 1.5em;
   }
 
   .badgeText {
@@ -97,5 +98,11 @@
   .copiedText {
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .badgeContainer {
+    margin: 1rem;
   }
 }
