--- a/components/VerifyForm/VerifyForm.module.css
+++ b/components/VerifyForm/VerifyForm.module.css
@@ -105,18 +105,20 @@
 
   .textColumn,
   .imageColumn {
-    width: 100vw;
     min-height: 5em;
+    max-height: 30vmax;
+    min-width: 50vw;
+    max-width: 75vw;
   }
 
   .imageColumn {
     order: 1;
-    max-height: 30vmax;
+    width: 60%;
   }
 
   .textColumn {
     order: 2;
-    min-width: 50vw;
+    width: 100%;
   }
 
   .inputRow {
