--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,7 @@ body > div {
   height: 100%;
   display: flex;
   flex-direction: column;
+  min-width: 320px;
 }
 
 main {
@@ -24,7 +25,14 @@ main {
   align-items: center;
   padding: 1rem 3rem;
   flex: auto 1 1;
-  padding-bottom: 5em; /* account for top bar */
+  margin-bottom: 5em; /* account for top bar */
+}
+
+@media only screen and (max-width: 768px) {
+  main {
+    padding: 1rem 1rem;
+    margin-bottom: 5em; /* account for top bar */
+  }
 }
 
 a {
